fix width of QfG1 menu on mobile devices
Reduce the width of QfG1 menu items on the narrowest screens, i.e. mobile devices.

--- a/ferrerih_qfg1_stylesheet.css
+++ b/ferrerih_qfg1_stylesheet.css
@@ -339,7 +339,7 @@ li.othernavbar {
 	background-color: transparent;
 	padding: 0em 0.5em; 
 	margin: 0; 
-	width: 231px;
+	width: 219px;
 	height: 45px;
 	display: block; 
 	font-style: normal; 
